--- a/package.json
+++ b/package.json
@@ -8,17 +8,19 @@
   },
   "main": "fork.js",
   "scripts": {
-    "test": "tape test/*.js"
+    "test": "tape test/*.js | faucet"
   },
   "engines": {
     "node": "0.10.x"
   },
   "dependencies": {
-    "back": "~0.1.5"
+    "back": "~0.1.5",
+    "errs": "^0.3.2"
   },
   "devDependencies": {
-    "tape": "~2.3.2",
-    "forkee": "~0.1.1"
+    "faucet": "0.0.1",
+    "forkee": "~1.0.0",
+    "tape": "^4.0.0"
   },
   "license": "MIT"
 }
